--- a/package.json
+++ b/package.json
@@ -6,7 +6,13 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --testTimeout=10000"
+    "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --testTimeout=10000",
+    "transpile": "babel . --out-dir dist-server"
+  },
+  "babel": {
+    "presets": [
+      "@babel/preset-env"
+    ]
   },
   "repository": {
     "type": "git",
@@ -32,6 +38,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.16"
+    "nodemon": "^2.0.16",
+    "faker": "^4.1.0"
   }
 }
