--- a/package.json
+++ b/package.json
@@ -6,13 +6,7 @@
   "scripts": {
     "server": "nodemon index.js",
     "start": "node index.js",
-    "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --testTimeout=10000",
-    "transpile": "babel . --out-dir dist-server"
-  },
-  "babel": {
-    "presets": [
-      "@babel/preset-env"
-    ]
+    "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --testTimeout=10000"
   },
   "repository": {
     "type": "git",
@@ -38,7 +32,7 @@
   },
   "devDependencies": {
     "cross-env": "^7.0.3",
-    "nodemon": "^2.0.16",
-    "faker": "^4.1.0"
+    "faker": "^4.1.0",
+    "nodemon": "^2.0.16"
   }
 }
