--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "server": "nodemon index.js",
     "start": "node index.js",
     "test": "cross-env DB_ENV=testing jest --watch --verbose --runInBand --testTimeout=10000",
-    "build": "rm -rf build && prettier --write src/ && js"
+    "build": "rm -rf build && prettier --write src/"
   },
   "repository": {
     "type": "git",
